@@ -1,3 +1,8 @@
+2005-05-06 Timothy Brownawell <tbrownaw@gmail.com>
+
+	* contrib/monoprof.sh: Add profiling test for "netsync large file".
+		Add options to only run specific profile tests.
+
 2005-05-11  Joel Reed  <joelwreed@comcast.com>
 
 	* contrib/monotone.zsh_completion: add zsh completion contrib.
